# py-autotask

./: .gitignore  CHANGELOG.md  CLAUDE_HANDOFF_PROMPT.md  CONSTANTS_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DIAGNOSTIC_REPORT.md  PROJECTS_ENHANCEMENT_TODO.md  QUERY_PATTERNS.md  README.md  REFACTORING_SUMMARY.md  claude_stdin_prompt.txt  complete_corruption_fix.py  comprehensive_fix.py  comprehensive_import_fix.py  debug_flow.py  diagnose_api_issue.py  example_usage.py  fix_broken_imports.py  fix_corruption.py  fix_query_helpers.py  fix_queryfilter_imports.py  fix_unused_imports.py  pyproject.toml  quick_test.py  refactoring_validation.py  scan_corruption.py  setup.cfg  setup.py  test_api_activation.py  test_auth_debug.py  test_auth_version.py  test_both_users.py  test_contracts_enhanced.py  test_final_verification.py  test_local_env.py  test_payload_debug.py  test_projects_enhanced.py  test_query_functionality.py  test_query_patterns.py  test_resources_enhanced.py  (+3 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  extended-tests.yml  release.yml
docs/: API_REFERENCE.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  USER_GUIDE.md
examples/: constants_usage.py  data_liberation_example.py
memory/backups/: backup-2025-06-23T22-05-38-867Z.json  backup-2025-06-23T22-06-14-260Z.json  backup-2025-06-23T22-06-48-491Z.json  backup-2025-06-23T22-07-25-296Z.json  backup-2025-06-23T22-07-59-831Z.json  backup-2025-06-23T22-08-39-736Z.json  backup-2025-06-23T22-09-06-588Z.json
memory/data/: entries.json
py_autotask/: __init__.py  async_client.py  auth.py  bulk_manager.py  cache.py  cli.py  cli_enhanced.py  client.py  constants.py  exceptions.py  pandas_integration.py  types.py  utils.py
py_autotask/caching/: __init__.py  cache_config.py  cache_manager.py
py_autotask/entities/: __init__.py  accounts.py  action_types.py  additional_invoice_field_values.py  allocation_codes.py  analytics.py  api_usage_metrics.py  appointments.py  article_attachments.py  article_configuration_item_category_associations.py  article_notes.py  article_plain_text_content.py  article_tag_associations.py  article_ticket_associations.py  article_to_article_associations.py  article_to_document_associations.py  attachment_info.py  attachments.py  audit_logs.py  automation_rules.py  backup_configuration.py  base.py  billing_codes.py  billing_item_approval_levels.py  billing_items.py  business_divisions.py  business_rules.py  change_order_charges.py  change_request_links.py  change_requests.py  checklist_libraries.py  checklist_library_checklist_items.py  (+167 more)
reports/: swarm-auto-centralized-1750716058662.json  swarm-development-centralized-1750717570431.json
tests/: __init__.py  conftest.py  test_api_coverage.py  test_attachments.py  test_auth.py  test_batch_operations.py  test_client.py  test_companies.py  test_companies_comprehensive.py  test_constants.py  test_contracts_enhanced.py  test_entity_integration.py  test_exceptions.py  test_integration.py  test_new_entities.py  test_performance.py  test_projects_comprehensive.py  test_projects_enhanced.py  test_query_builder.py  test_query_functionality.py  test_query_patterns.py  test_resources_enhanced.py  test_ticket_note_attachments.py  test_tickets.py  test_time_entries_comprehensive.py
